# msPlugins

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  cpp.hint
src/collections/nodeEditor/: CMakeLists.txt  nodeBoxContainer_node.cpp  nodeBoxContainer_node.h  nodeEditorSceneMetadata_cmd.cpp  nodeEditorSceneMetadata_cmd.h  nodeEditorTabInfoMetadata_cmd.cpp  nodeEditorTabInfoMetadata_cmd.h  plugin.cpp  stickyContainer_node.cpp  stickyContainer_node.h
src/commands/public/: CMakeLists.txt  instancerBake_cmd.cpp  instancerBake_cmd.h  plugin.cpp
src/data/: CMakeLists.txt  angleArray_data.cpp  angleArray_data.h  eulerArray_data.cpp  eulerArray_data.h  plugin.cpp  quaternionArray_data.cpp  quaternionArray_data.h
src/nodes/array/: CMakeLists.txt  installTemplates.cmake  plugin.cpp
src/nodes/array/angle/: arithmeticSequenceAngleArray_node.cpp  arithmeticSequenceAngleArray_node.h  geometricSequenceAngleArray_node.cpp  geometricSequenceAngleArray_node.h  packAngleArray_node.cpp  packAngleArray_node.h  unpackAngleArray_node.cpp  unpackAngleArray_node.h
src/nodes/array/double/: arithmeticSequenceDoubleArray_node.cpp  arithmeticSequenceDoubleArray_node.h  geometricSequenceDoubleArray_node.cpp  geometricSequenceDoubleArray_node.h  packDoubleArray_node.cpp  packDoubleArray_node.h  unpackDoubleArray_node.cpp  unpackDoubleArray_node.h
src/nodes/array/euler/: arithmeticSequenceEulerArray_node.cpp  arithmeticSequenceEulerArray_node.h  geometricSequenceEulerArray_node.cpp  geometricSequenceEulerArray_node.h  packEulerArray_node.cpp  packEulerArray_node.h  unpackEulerArray_node.cpp  unpackEulerArray_node.h
src/nodes/array/int/: arithmeticSequenceIntArray_node.cpp  arithmeticSequenceIntArray_node.h  geometricSequenceIntArray_node.cpp  geometricSequenceIntArray_node.h  packIntArray_node.cpp  packIntArray_node.h  unpackIntArray_node.cpp  unpackIntArray_node.h
src/nodes/array/matrix/: composeMatrixArray_node.cpp  composeMatrixArray_node.h  decomposeMatrixArray_node.cpp  decomposeMatrixArray_node.h  packMatrixArray_node.cpp  packMatrixArray_node.h  unpackMatrixArray_node.cpp  unpackMatrixArray_node.h
src/nodes/array/quaternion/: packQuaternionArray_node.cpp  packQuaternionArray_node.h  unpackQuaternionArray_node.cpp  unpackQuaternionArray_node.h
src/nodes/array/vector/: arithmeticSequenceVectorArray_node.cpp  arithmeticSequenceVectorArray_node.h  geometricSequenceVectorArray_node.cpp  geometricSequenceVectorArray_node.h  packVectorArray_node.cpp  packVectorArray_node.h  unpackVectorArray_node.cpp  unpackVectorArray_node.h
src/nodes/component/: CMakeLists.txt  aim_node.cpp  aim_node.h  aim_transform.cpp  aim_transform.h  flexiChainDouble_locator.cpp  flexiChainDouble_locator.h  flexiChainDouble_locator_scaleAdjustment_manip.cpp  flexiChainDouble_locator_scaleAdjustment_manip.h  flexiChainDouble_locator_subSceneOverride.cpp  flexiChainDouble_locator_subSceneOverride.h  flexiChainDouble_locator_twistAdjustment_manip.cpp  flexiChainDouble_locator_twistAdjustment_manip.h  flexiChainDouble_locator_upVector_manip.cpp  flexiChainDouble_locator_upVector_manip.h  flexiChainSingle_locator.cpp  flexiChainSingle_locator.h  flexiChainSingle_locator_scaleAdjustment_manip.cpp  flexiChainSingle_locator_scaleAdjustment_manip.h  flexiChainSingle_locator_subSceneOverride.cpp  flexiChainSingle_locator_subSceneOverride.h  flexiChainSingle_locator_twistAdjustment_manip.cpp  flexiChainSingle_locator_twistAdjustment_manip.h  flexiChainSingle_locator_upVector_manip.cpp  flexiChainSingle_locator_upVector_manip.h  flexiChainTriple_locator.cpp  flexiChainTriple_locator.h  flexiChainTriple_locator_scaleAdjustment_manip.cpp  flexiChainTriple_locator_scaleAdjustment_manip.h  flexiChainTriple_locator_subSceneOverride.cpp  flexiChainTriple_locator_subSceneOverride.h  flexiChainTriple_locator_twistAdjustment_manip.cpp  flexiChainTriple_locator_twistAdjustment_manip.h  flexiChainTriple_locator_upVector_manip.cpp  flexiChainTriple_locator_upVector_manip.h  flexiHelpers.h  flexiInstancer_locator.cpp  flexiInstancer_locator.h  flexiInstancer_locator_positionAdjustment_manip.cpp  flexiInstancer_locator_positionAdjustment_manip.h  (+26 more)
src/nodes/hrc/: CMakeLists.txt  hrc.cpp  hrc.h  hrc_matrix.cpp  hrc_matrix.h  installTemplates.cmake  module_hrc.cpp  module_hrc.h  plugin.cpp  rig_hrc.cpp  rig_hrc.h
src/nodes/math/: CMakeLists.txt  installTemplates.cmake  plugin.cpp
src/nodes/math/arithmetic/: addAngle_node.cpp  addAngle_node.h  addInt_node.cpp  addInt_node.h  add_node.cpp  add_node.h  averageAngle_node.cpp  averageAngle_node.h  averageInt_node.cpp  averageInt_node.h  average_node.cpp  average_node.h  divideAngleByInt_node.cpp  divideAngleByInt_node.h  divideAngle_node.cpp  divideAngle_node.h  divideByInt_node.cpp  divideByInt_node.h  divideInt_node.cpp  divideInt_node.h  divide_node.cpp  divide_node.h  modulus_node.cpp  modulus_node.h  multiplyAngleByInt_node.cpp  multiplyAngleByInt_node.h  multiplyAngle_node.cpp  multiplyAngle_node.h  multiplyByInt_node.cpp  multiplyByInt_node.h  multiplyInt_node.cpp  multiplyInt_node.h  multiply_node.cpp  multiply_node.h  negateAngle_node.cpp  negateAngle_node.h  negateInt_node.cpp  negateInt_node.h  negate_node.cpp  negate_node.h  (+24 more)
src/nodes/math/condition/: conditionAngle_node.cpp  conditionAngle_node.h  conditionInt_node.cpp  conditionInt_node.h  condition_node.cpp  condition_node.h  maxAngle_node.cpp  maxAngle_node.h  maxElementAngle_node.cpp  maxElementAngle_node.h  maxElementInt_node.cpp  maxElementInt_node.h  maxElement_node.cpp  maxElement_node.h  maxInt_node.cpp  maxInt_node.h  max_node.cpp  max_node.h  minAngle_node.cpp  (+45 more)
src/nodes/scripts/: CMakeLists.txt
src/utils/: CMakeLists.txt  color_utils.cpp  color_utils.h  command_utils.cpp  command_utils.h  data_utils.cpp  data_utils.h  macros.h  math_utils.cpp  math_utils.h  matrix_utils.cpp  matrix_utils.h  name_utils.cpp  name_utils.h  node_utils.cpp  node_utils.h  plugin_utils.cpp  plugin_utils.h  quaternion_utils.cpp  quaternion_utils.h  spline_utils.cpp  spline_utils.h  vector_utils.cpp  vector_utils.h
(+703 files in other folders)
